// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Rotate API 1`] = `
.c1 {
  line-height: 0;
}

.c1 > * {
  -webkit-transform-origin: center;
  -ms-transform-origin: center;
  transform-origin: center;
  -webkit-transition: -webkit-transform 0.4s cubic-bezier(0.68,-0.55,0.27,1.55);
  -webkit-transition: transform 0.4s cubic-bezier(0.68,-0.55,0.27,1.55);
  transition: transform 0.4s cubic-bezier(0.68,-0.55,0.27,1.55);
  -webkit-transform: initial;
  -ms-transform: initial;
  transform: initial;
}

.c0 {
  display: inline-block;
  color: #00A1DE;
  font-size: 24px;
  cursor: pointer;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <svg
      fill="currentColor"
      height="1em"
      preserveAspectRatio="xMidYMid meet"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M7.4 9.8l4.6 4.6 4.6-4.6 1.4 1.4-6 6-6-6 1.4-1.4z"
      />
    </svg>
  </div>
</div>
`;

exports[`Storyshots Rotate With active props 1`] = `
.c1 {
  line-height: 0;
}

.c1 > * {
  -webkit-transform-origin: center;
  -ms-transform-origin: center;
  transform-origin: center;
  -webkit-transition: -webkit-transform 0.4s cubic-bezier(0.68,-0.55,0.27,1.55);
  -webkit-transition: transform 0.4s cubic-bezier(0.68,-0.55,0.27,1.55);
  transition: transform 0.4s cubic-bezier(0.68,-0.55,0.27,1.55);
  -webkit-transform: rotate(-180deg);
  -ms-transform: rotate(-180deg);
  transform: rotate(-180deg);
}

.c0 {
  display: inline-block;
  color: #00A1DE;
  font-size: 24px;
  cursor: pointer;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <svg
      fill="currentColor"
      height="1em"
      preserveAspectRatio="xMidYMid meet"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M7.4 9.8l4.6 4.6 4.6-4.6 1.4 1.4-6 6-6-6 1.4-1.4z"
      />
    </svg>
  </div>
</div>
`;

exports[`Storyshots Rotate With other icon 1`] = `
.c1 {
  line-height: 0;
}

.c1 > * {
  -webkit-transform-origin: center;
  -ms-transform-origin: center;
  transform-origin: center;
  -webkit-transition: -webkit-transform 0.4s cubic-bezier(0.68,-0.55,0.27,1.55);
  -webkit-transition: transform 0.4s cubic-bezier(0.68,-0.55,0.27,1.55);
  transition: transform 0.4s cubic-bezier(0.68,-0.55,0.27,1.55);
  -webkit-transform: initial;
  -ms-transform: initial;
  transform: initial;
}

.c0 {
  display: inline-block;
  color: #00A1DE;
  font-size: 24px;
  cursor: pointer;
}

<div
  className="c0"
>
  <div
    className="c1"
    onClick={[Function]}
  >
    <svg
      fill="currentColor"
      height="1em"
      preserveAspectRatio="xMidYMid meet"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M12 18.9l5-5h-3.8V5.1h-2.5v8.8H7l5 5z"
      />
    </svg>
  </div>
</div>
`;

exports[`Storyshots Rotate With state 1`] = `
.c1 {
  line-height: 0;
}

.c1 > * {
  -webkit-transform-origin: center;
  -ms-transform-origin: center;
  transform-origin: center;
  -webkit-transition: -webkit-transform 0.4s cubic-bezier(0.68,-0.55,0.27,1.55);
  -webkit-transition: transform 0.4s cubic-bezier(0.68,-0.55,0.27,1.55);
  transition: transform 0.4s cubic-bezier(0.68,-0.55,0.27,1.55);
  -webkit-transform: initial;
  -ms-transform: initial;
  transform: initial;
}

.c0 {
  display: inline-block;
  color: #00A1DE;
  font-size: 24px;
  cursor: pointer;
}

<div
  className="c0"
>
  <div
    className="c1"
    onClick={[Function]}
  >
    <svg
      fill="currentColor"
      height="1em"
      preserveAspectRatio="xMidYMid meet"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M7.4 9.8l4.6 4.6 4.6-4.6 1.4 1.4-6 6-6-6 1.4-1.4z"
      />
    </svg>
  </div>
</div>
`;
